Source/WebKit2/UIProcess/API/Cocoa/WKBrowsingContextController.mm
@@ -47,7 +47,6 @@
 #import "WKNSURLExtras.h"
 #import "WKPagePolicyClientInternal.h"
 #import "WKProcessGroupPrivate.h"
-#import "WKRenderingProgressEventsInternal.h"
 #import "WKRetainPtr.h"
 #import "WKURLRequestNS.h"
 #import "WKURLResponseNS.h"
@@ -358,25 +357,6 @@ static HashMap<WebPageProxy*, WKBrowsingContextController *>& browsingContextCon
     return _page->estimatedProgress();
 }
 
-static inline LayoutMilestones layoutMilestones(WKRenderingProgressEvents events)
-{
-    LayoutMilestones milestones = 0;
-
-    if (events & WKRenderingProgressEventFirstLayout)
-        milestones |= DidFirstLayout;
-
-    if (events & WKRenderingProgressEventFirstPaintWithSignificantArea)
-        milestones |= DidHitRelevantRepaintedObjectsAreaThreshold;
-
-    return milestones;
-}
-
-- (void)setObservedRenderingProgressEvents:(WKRenderingProgressEvents)events
-{
-    _observedRenderingProgressEvents = events;
-    _page->listenForLayoutMilestones(layoutMilestones(events));
-}
-
 #pragma mark Active Document Introspection
 
 - (NSString *)title
@@ -555,15 +535,6 @@ static void processDidCrash(WKPageRef page, const void* clientInfo)
         [(id <WKBrowsingContextLoadDelegatePrivate>)loadDelegate browsingContextControllerWebProcessDidCrash:browsingContext];
 }
 
-static void didLayout(WKPageRef page, WKLayoutMilestones milestones, WKTypeRef userData, const void* clientInfo)
-{
-    WKBrowsingContextController *browsingContext = (WKBrowsingContextController *)clientInfo;
-    auto loadDelegate = browsingContext->_loadDelegate.get();
-
-    if ([loadDelegate respondsToSelector:@selector(browsingContextController:renderingProgressDidChange:)])
-        [loadDelegate browsingContextController:browsingContext renderingProgressDidChange:renderingProgressEvents(milestones)];
-}
-
 static void setUpPageLoaderClient(WKBrowsingContextController *browsingContext, WebPageProxy& page)
 {
     WKPageLoaderClientV4 loaderClient;
@@ -587,8 +558,6 @@ static void setUpPageLoaderClient(WKBrowsingContextController *browsingContext, 
     loaderClient.didChangeBackForwardList = didChangeBackForwardList;
 
     loaderClient.processDidCrash = processDidCrash;
-
-    loaderClient.didLayout = didLayout;
 
     WKPageSetPageLoaderClient(toAPI(&page), &loaderClient.base);
 }
