Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h
@@ -27,12 +27,7 @@
 
 #if WK_API_ENABLED
 
-typedef NS_OPTIONS(NSUInteger, _WKRenderingProgressEvents) {
-    _WKRenderingProgressEventFirstLayout = 1 << 0,
-    _WKRenderingProgressEventFirstVisuallyNonEmptyLayout WK_ENUM_AVAILABLE(WK_MAC_TBA, WK_IOS_TBA) = 1 << 1,
-    _WKRenderingProgressEventFirstPaintWithSignificantArea = 1 << 2,
-    _WKRenderingProgressEventReachedSessionRestorationRenderTreeSizeThreshold WK_ENUM_AVAILABLE(WK_MAC_TBA, WK_IOS_TBA) = 1 << 3
-} WK_ENUM_AVAILABLE(10_10, 8_0);
+#import <WebKit/_WKRenderingProgressEvents.h>
 
 typedef NS_ENUM(NSInteger, _WKPaginationMode) {
     _WKPaginationModeUnpaginated,
